# srvfs

./: Cargo.toml  docker-compose.yml
src/: main.rs  srvfs.rs  vfs.rs
