[package]
name = "srvfs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fuser = "0.10.0"
libc = "0.2.117"
async-nats = "0.34"
tokio = { version = "1", features = ["full"] }
structopt = "0.3"
env_logger = "0.9"
futures-util = "0.3"
